antioch custom blocks updates

--- a/src/accordion-card/editor.scss
+++ b/src/accordion-card/editor.scss
@@ -7,3 +7,6 @@
  .wp-block-antioch-custom-blocks-accordion-card.is-selected {
     outline: dotted #50a68463 3px;
  }
+ .wp-block-antioch-custom-blocks-accordion-card button {
+   border-bottom: 1px solid #dedede;
+ }
